<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.codetribe.bmi2.BMIActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorLight"
        android:textStyle="bold"
        android:text="@string/title_bmi_calculator" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_description_black_24dp"
        android:background="@null"
        android:paddingRight="15dp"
        android:id="@+id/imgButtom"
        android:layout_below="@+id/toolbar_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/height"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seekHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2440"
            android:progressDrawable="@drawable/seekbar_layout"
            android:thumb="@drawable/thumb" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/weight"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seekWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:max="1400"
            android:progressDrawable="@drawable/seekbar_layout"
            android:thumb="@drawable/thumb" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/bmi"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seekBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:progressDrawable="@drawable/seekbar_layout"
            android:thumb="@drawable/thumb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linResult"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInterprateBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/your_bmi_unknown"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_style"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvClassify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/your_bmi_unknown"
        android:textColor="@color/PrimaryText"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imgWeight"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:src="@drawable/stop_icon" />
</LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.67"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/height_"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvwieght"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/weight_"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="5dp"
            android:text="@string/bmi_"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>
